# candidate-transformer

./: README.md  config.json  pyproject.toml  requirements.txt
sample_inputs/: recruiter.csv  resume.txt
sample_outputs/: candidate.json
src/: cli.py  config.py  exporter.py  merger.py  models.py  normalizers.py  schema.py
src/extractors/: csv_extractor.py  resume_extractor.py
tests/: test_duplicate_skills.py  test_extractors.py  test_integration.py  test_invalid_email.py  test_merge_conflict.py  test_merger.py  test_missing_phone.py  test_normalizers.py
