[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "candidate-transformer"
version = "1.0.0"
description = "Multi-Source Candidate Data Transformer"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "jsonschema>=4.0",
    "PyPDF2>=3.0",
    "phonenumbers>=8.13",
    "email-validator>=2.0",
]

[project.scripts]
candidate-transform = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
